--- a/tab_1_background/background.Rmd
+++ b/tab_1_background/background.Rmd
@@ -13,24 +13,33 @@ output:
 
 ## Background
 
-The accumulation of discarded objects (a.k.a. trash and debris) in the environment has become an issue of significant, global concern. On land and in freshwater habitats, these objects are typically referred to as trash, and in the marine environment, these objects are referred to as marine debris. Trash and marine debris affect aesthetics and/or aquatic life across every habitat they touch. Marine debris in southern California significantly influences the decision of the public to go to beaches, costing Orange County residents alone an estimated $148 million per year just to travel to cleaner beaches. Debris presents entanglement and ingestion dangers for marine organisms. And plastics in the environment can transport other contaminants, creating a bioaccumulation pathway by which aquatic organisms take up contaminants as they inadvertently consume plastic.
+The Southern California Bight (SCB) is a 6003 $km^2$ open embayment that stretches from Point Conception, California, to the United States-Mexico International Border (Punta Colonet, Baja California). The SCB is an unique marine ecosystem with complex topography and diverse habitats that are inhabited by thousands of species of ﬁsh and invertebrates. The Bight also houses two major ports: the Los Angeles/Long Beach Harbor, the largest commercial port in the United States, and San Diego Harbor, home of some of the largest US Naval facilities in the country. In addition, the SCB offers Southern California several miles-long beaches along with numerous recreational activities that attract millions of tourists annually, making it a major contributor to the economy of that region (Moore et. al. 2018).
+
+The SCB also houses two of the largest metropolitan areas in the West Coast, Los Angeles and San Diego, with the overall population exceeding 21 million people according to the Census Bureau 2010. The continuous growth in population and urban developments has raised many concerns about the impact humans have on nature. One of these concerns focuses on the accumulation of man-made objects being discarded into the natural environment, speciﬁcally in streams, rivers and subsequently into the Bight. In rivers and streams, these discarded objects are speciﬁed as trash while in the marine environment, they are often referred to as marine debris. On land, the presence of trash negatively impacts the aesthetics of the environment. This effect can potentially lead to the reduction of tourism, drive away local business, and consequently harm the regional economy. Marine debris, on the other hand, can pose serious threat on aquatic life through entanglement (i.e. ”ghost” ﬁshing), ingestion, as well as providing assistance for invading species causing alteration of the benthic communities (Hofer 2008, Moore et. al. 2018). 
+
 
 
 
 ## Goals of This Study
 
-This study aimed to create southern California’s first regionalized assessment of trash and marine debris, with a goal to assess the extent and magnitude of trash and marine debris in southern California waterways. Three key questions were asked:
+The Southern California Bight Regional Monitoring Program, also known as the Bight Program, is a collective effort of multiple agencies with the aim to provide the ﬁrst long-term regional assessment on the quality of the SCB. The program is a series of studies conducted every ﬁve years that began in 1994. The latest study, Bight ’18, was by far the largest one in scale involving 46 organizations, both international and volunteer. It consists of 5 technical components: Sediment Quality (formerly Contaminant Impact Assessment/ Coastal Ecology), Microbiology, Ocean Acidification, Harmful Algal Blooms, and Trash (Moore et. al. 2018). For this study, the main focus will be on the following objectives:
 
-- Does the extent and magnitude of trash and marine debris vary among freshwater and marine habitats?
+ * Determine the extent and magnitude of trash and marine debris across all freshwater and marine habitats. 
+ 
+ *  Determine the trend of these extent and magnitude of the trash and debris over time.
+ 
+ * Identify any attributes that may contribute to the variations of trash abundance in streams and rivers. 
 
-- Does the extent and magnitude of trash and marine debris vary over time?
+(Moore et al. 2018)
 
 
 ## Study Approach 
 
-The Bight debris survey examined trash and marine debris in three main habitat types across the land- ocean interface: (1) trash in streams, (2) marine macro-debris on the seafloor, and (3) marine micro- plastic debris in seafloor sediment. Data were collected in all three habitats utilizing a probability-based stratified-random design (Stevens 1997) that allows unbiased estimates of extent (i.e., % of stream-miles or % of seafloor with debris) and magnitude (i.e., average abundance of debris).
+The Bight’ 18 debris survey sampled ocean and streams using a similar approach from its previous years. It focused on sampling from three habitats: (1) trash in streams,  (2) macro-debris on the seafloor, and (3) macro-debris in seafloor sediment using probability-based stratified-random sampling to account for unbiased estimates.
 
-#### Data structure    
+The structure of the complete data (Bight '13 and Bight '18) can be viewed under the Data Tab.
+
+
 
 
 
